--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
     --background-color: #fff;
-    --btn-color: #0987f2;
+    --btn-color: #b4657d;
     --btn-text-color: #fff;
     --project-card-bg: #ffffff00;
     --text-color: #222;
@@ -58,7 +58,7 @@
   
   h1 {
     font-family: 'Rubik', sans-serif;
-    font-size: 32px;
+    font-size: 30px;
   }
   
   p {
